--- a/food_delivery/src/main/resources/application.properties
+++ b/food_delivery/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=food_delivery
 
 spring.datasource.url=jdbc:mysql://localhost:3306/food_delivery_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=yourpassword
+spring.datasource.password=123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
